part2/App/app1.yaml
apiVersion: apps/v1   
kind: Deployment    
metadata:            
  name: app-one
  labels:        
    app: app-one   
spec:            
  replicas: 3    
  selector:       
    matchLabels: 
      app: app-one
  template:        
    metadata:    
      labels:    
        app: app-one
    spec:        
      containers:    
      - name: app-one
        image: paulbouwer/hello-kubernetes:1.10
        ports:
          - containerPort: 8080
