part2/App/app2.yaml
apiVersion: apps/v1   
kind: Deployment    
metadata:            
  name: app-two
  labels:        
    app: app-two   
spec:            
  replicas: 1    
  selector:       
    matchLabels: 
      app: app-two
  template:        
    metadata:    
      labels:    
        app: 
    spec:        
      containers:    
      - name: app-two
        image: paulbouwer/hello-kubernetes:1.10
        ports:
          - containerPort: 8080
